--- a/component_list/src/main/res/values/strings.xml
+++ b/component_list/src/main/res/values/strings.xml
@@ -14,4 +14,8 @@
     <string name="auditioned">已试听</string>
     <string name="has_visited">已到访</string>
 
+
+    <!--搜索-->
+    <string name="search">搜索</string>
+
 </resources>
