--- a/common/src/main/res/values/strings.xml
+++ b/common/src/main/res/values/strings.xml
@@ -1,3 +1,6 @@
 <resources>
     <string name="app_name">BaseLibrary</string>
+
+    <string name="save">保存</string>
+    <string name="confirm">确认</string>
 </resources>
